implement lighing maps and materials

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,8 @@ add_executable(OpenGL
     model.cpp
     camera.h
     camera.cpp
+    common.h
+    common.cpp
     )
 
 set(COMPILE_FLAGS "-g -DLOG_USE_COLOR ${COMPILE_FLAGS}")
