--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(opengl VERSION 0.1.0)
 add_subdirectory(external/stb)
 add_subdirectory(external/glm)
 add_subdirectory(external/glad)
+add_subdirectory(external/assimp)
 add_subdirectory(external/rxi_log)
 
 add_subdirectory(src)
