:building_construction: refactor directory structure into engine and fluidsim

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,7 @@ add_subdirectory(external/assimp)
 add_subdirectory(external/rxi_log)
 add_subdirectory(external/imgui-lib)
 
+add_subdirectory(fluidsim)
+add_subdirectory(engine)
+
 add_subdirectory(src)
