:sparkles: add fluidsim starter code

--- a/fluidsim/CMakeLists.txt
+++ b/fluidsim/CMakeLists.txt
@@ -1,7 +1,7 @@
 set (CMAKE_CXX_STANDARD 17)
 
 add_library(
-    fluidsim
+    fluidsim STATIC
 
     src/fluidsim.cpp
 
@@ -11,4 +11,4 @@ add_library(
 set(CMAKE_BUILD_TYPE Debug)
 target_include_directories(fluidsim PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
-target_link_libraries(fluidsim PRIVATE glm)
+target_link_libraries(fluidsim PRIVATE engine assimp glfw imgui glm stb GL log glad rt dl m Xrandr Xi X11 pthread xcb Xau Xdmcp)
