--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,16 @@
-# find_package(glfw3 REQUIRED FATAL_ERROR)
-
 set (CMAKE_CXX_STANDARD 17)
 
-add_executable(OpenGL
+find_package(OpenGL REQUIRED)
+
+add_executable(Guppy
     main.cpp
     )
 
 set(COMPILE_FLAGS "-g -DLOG_USE_COLOR ${COMPILE_FLAGS}")
 set(CMAKE_BUILD_TYPE Debug)
 
-target_link_libraries(OpenGL PRIVATE engine fluidsim assimp glfw imgui glm stb GL log glad rt dl m Xrandr Xi X11 pthread xcb Xau Xdmcp)
+IF (WIN32)
+    target_link_libraries(Guppy PRIVATE engine fluidsim assimp glfw imgui glm stb log glad opengl32)
+ELSE()
+    target_link_libraries(Guppy PRIVATE engine fluidsim assimp glfw imgui glm stb GL log glad rt dl m Xrandr Xi X11 pthread xcb Xau Xdmcp)
+ENDIF()
