--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -38,7 +38,7 @@ set(COMPILE_FLAGS "-g -DLOG_USE_COLOR ${COMPILE_FLAGS}")
 target_include_directories(engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 IF (WIN32)
-    target_link_libraries(engine PRIVATE fluidsim assimp glfw imgui glm stb log glad opengl32)
+    target_link_libraries(engine PRIVATE fluidsim nlohmann_json::nlohmann_json assimp glfw imgui glm stb log glad opengl32)
 ELSE()
-    target_link_libraries(engine PRIVATE fluidsim assimp glfw imgui glm stb GL log glad rt dl m Xrandr Xi X11 pthread xcb Xau Xdmcp)
+    target_link_libraries(engine PRIVATE fluidsim nlohmann_json::nlohmann_json assimp glfw imgui glm stb GL log glad rt dl m Xrandr Xi X11 pthread xcb Xau Xdmcp)
 ENDIF()
