--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "external/imgui-lib/imgui"]
 	path = external/imgui-lib/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "external/json"]
+	path = external/json
+	url = https://github.com/nlohmann/json.git
