--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.13)
 project(opengl VERSION 0.1.0)
 
+set(JSON_BuildTests OFF CACHE INTERNAL "")
+
 add_subdirectory(external/stb)
+add_subdirectory(external/json)
 add_subdirectory(external/glfw)
 add_subdirectory(external/glm)
 add_subdirectory(external/glad)
