--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(JSON_BuildTests OFF CACHE INTERNAL "")
 
 add_subdirectory(external/stb)
 add_subdirectory(external/json)
+add_subdirectory(external/reactphysics3d)
 add_subdirectory(external/glfw)
 add_subdirectory(external/glm)
 add_subdirectory(external/glad)
