--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(
     src/light.cpp
     src/kernel.cpp
     src/fsrender.cpp
+    src/physics.cpp
 
     include/engine/window.h
     include/engine/texture.h
@@ -34,6 +35,7 @@ add_library(
     include/engine/scene.h
     include/engine/kernel.h
     include/engine/fsrender.h
+    include/engine/physics.h
 )
 
 set(CMAKE_BUILD_TYPE Debug)
@@ -42,7 +44,7 @@ set(COMPILE_FLAGS "-g -DLOG_USE_COLOR ${COMPILE_FLAGS}")
 target_include_directories(engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 IF (WIN32)
-    target_link_libraries(engine PRIVATE fluidsim nlohmann_json::nlohmann_json assimp glfw imgui glm stb log glad opengl32)
+    target_link_libraries(engine PRIVATE fluidsim nlohmann_json::nlohmann_json reactphysics3d assimp glfw imgui glm stb log glad opengl32)
 ELSE()
-    target_link_libraries(engine PRIVATE fluidsim nlohmann_json::nlohmann_json assimp glfw imgui glm stb GL log glad rt dl m Xrandr Xi X11 pthread xcb Xau Xdmcp)
+    target_link_libraries(engine PRIVATE fluidsim nlohmann_json::nlohmann_json reactphysics3d assimp glfw imgui glm stb GL log glad rt dl m Xrandr Xi X11 pthread xcb Xau Xdmcp)
 ENDIF()
