:sparkles: implement physics-rendering interface

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ set(COMPILE_FLAGS "-g -DLOG_USE_COLOR ${COMPILE_FLAGS}")
 set(CMAKE_BUILD_TYPE Debug)
 
 IF (WIN32)
-    target_link_libraries(Guppy PRIVATE engine fluidsim assimp glfw imgui glm stb log glad opengl32)
+    target_link_libraries(Guppy PRIVATE engine reactphysics3d fluidsim assimp glfw imgui glm stb log glad opengl32)
 ELSE()
-    target_link_libraries(Guppy PRIVATE engine fluidsim assimp glfw imgui glm stb GL log glad rt dl m Xrandr Xi X11 pthread xcb Xau Xdmcp)
+    target_link_libraries(Guppy PRIVATE engine reactphysics3d fluidsim assimp glfw imgui glm stb GL log glad rt dl m Xrandr Xi X11 pthread xcb Xau Xdmcp)
 ENDIF()
