:bug: solve the hardest bug I have ever faced in my life

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ project(opengl VERSION 0.1.0)
 
 set(JSON_BuildTests OFF CACHE INTERNAL "")
 
+set(RP3D_LOGS_ENABLED ON)
+set(RP3D_PROFILING_ENABLED OFF)
+
+set(CMAKE_BUILD_TYPE Debug)
+
 add_subdirectory(external/stb)
 add_subdirectory(external/json)
 add_subdirectory(external/reactphysics3d)
