* Fix transform from world pos to grid pos; * No longer create arbitrary scale/dim factors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,12 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "complex": "cpp",
+        "csignal": "cpp",
+        "future": "cpp",
+        "typeindex": "cpp",
+        "valarray": "cpp",
+        "variant": "cpp"
     }
 }
